--- a/cosinnus/static/sass/_bootstrap-adjustments.scss
+++ b/cosinnus/static/sass/_bootstrap-adjustments.scss
@@ -189,6 +189,8 @@ textarea {
 
 
 ul.pagination {
+	margin-bottom: 0;
+
 	li {
 		background-color: $app-neutral-color-white;
 		border-width: 0;
