--- a/cosinnus/static/sass/_general.scss
+++ b/cosinnus/static/sass/_general.scss
@@ -176,10 +176,6 @@ p.navi-explanation {
 	position: absolute;
 	right: 0;
 	bottom: 0;
-
-	button {
-		float: left;
-	}
 }
 
 
